Changed JDK21 methods to older ones in order for Redis to work